Fixed better link for schema

--- a/output/index.html
+++ b/output/index.html
@@ -124,10 +124,9 @@
         <p>Kursplanen hittas genom att söka på <a href="http://edu.bth.se/utbildning/utb_kursplaner.asp?KKurskod=DV1612" target="_blank">DV1612</a> via BTH's webbplats.</p>
     </section>
 
-    <section id="studyplan">
-        <h3><a href="#studyplan">Studie- och lektionsplan</a></h3>
-        <p>Schema för kursen finns via [schema.bth.se](https://cloud.timeedit.net/bth/web/sched1/ri1w7X7Q47ZZ9YQm5Q0291Y7yQY.html).</p>
-        <p>[Studieplan]() och [Lektionsplan]().</p>
+    <section id="schema">
+        <h3><a href="#schema">Schema</a></h3>
+        <p>Schema för kursen finns via <a href="https://cloud.timeedit.net/bth/web/sched1/ri10745QX76Z54Q5Z16g2740y0096Y7Y409gQY5Q5.html">schema.bth.se</a>.</p>
     </section>
 
     <section id="ladok">
